--- a/src/Pages/HomePage/NewsLatter/NewsLetter.css
+++ b/src/Pages/HomePage/NewsLatter/NewsLetter.css
@@ -8,7 +8,7 @@
 }
 
 .newsletterIcon-div {
-    background-color: #03B97C;
+    background-color: #4b69bd;
     padding: 10px;
     border-radius: 100%;
     margin-bottom: 20px;
