--- a/src/Pages/HomePage/Banner/Banner.css
+++ b/src/Pages/HomePage/Banner/Banner.css
@@ -1,15 +1,9 @@
 .homepage {
     width: 90%;
     margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding-top: 200px;
     height: 100vh;
-}
-
-.homepage img {
-    width: 100%;
-    height: 500px;
+    color: #ffffff;
 }
 
 .textContainer {
@@ -29,28 +23,10 @@
     margin: 20px 0px;
 }
 
-.textContainer button {
-    margin-top: 30px;
-    color: #ffffff;
-    background-color: #03B97C;
-    padding: 15px 25px;
-    border: 2px solid #03B97C;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: 1s;
-}
-
-.textContainer button:hover {
-    color: #03B97C;
-    background-color: transparent;
-    border: 2px solid #03B97C;
-}
 
 @media only screen and (max-width: 850px) {
     .homepage {
         width: 95%;
-        display: flex;
-        flex-direction: column-reverse;
     }
 
     .textContainer {
@@ -58,12 +34,6 @@
         padding: 20px;
     }
 
-    .homepage img {
-        margin-top: 50px;
-        width: 100%;
-        height: 250px;
-    }
-
     .textContainer h1 {
         font-size: 25px;
         font-weight: bold;
@@ -76,31 +46,13 @@
         margin: 10px 0px;
     }
 
-    .textContainer button {
-        margin-top: 20px;
-        color: #ffffff;
-        background-color: #03B97C;
-        padding: 8px 15px;
-        border: 2px solid #03B97C;
-        font-weight: bold;
-        border-radius: 5px;
-    }
 }
 
 @media only screen and (max-width: 450px) {
     .homepage {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        background-color: rgba(123, 220, 181, 0.2);
         height: 100%;
     }
-
-    .homepage img {
-        width: 100%;
-        height: 200px;
-    }
-
+    
     .textContainer h1 {
         font-size: 25px;
         font-weight: bold;
@@ -111,15 +63,5 @@
         font-size: 15px;
         font-weight: bold;
         margin: 10px 0px;
-    }
-
-    .textContainer button {
-        margin-top: 20px;
-        color: #ffffff;
-        background-color: #03B97C;
-        padding: 8px 15px;
-        border: 2px solid #03B97C;
-        font-weight: bold;
-        border-radius: 5px;
     }
 }
