--- a/src/Pages/HomePage/HomeAbout/HomeAbout.css
+++ b/src/Pages/HomePage/HomeAbout/HomeAbout.css
@@ -27,10 +27,10 @@
 }
 .icon{
     font-size: 50px;
-    color: #03B97C;
+    color: #4b69bd;
 }
 .center:hover .icon-div{
-    background-color: #03B97C;
+    background-color: #4b69bd;
     transition: 0.5s;
     margin-top: -10px;
     margin-bottom: 10px;
